# Monte-Carlo-Ray-Tracing

./: .gitignore  CMakeLists.txt  README.md  todo.md
include/: Algorithms.h  Camera.h  Image.h  Light.h  Plane.h  Ray.h  Scene.h  Shape.h  Sphere.h  Walls.h
src/: Algorithms.cpp  Camera.cpp  Image.cpp  Light.cpp  Plane.cpp  Ray.cpp  Scene.cpp  Shape.cpp  Sphere.cpp  Walls.cpp  main.cpp
